Adiciona seção de transparência sobre uso de IA no notebook
 Seção completa sobre assistência de IA para melhorias técnicas
 Esclarece uso para correções, validações e aprimoramento de código
 Mantém transparência ética e integridade científica do projeto
 Preserva autenticidade das análises e descobertas autorais

--- a/analise_rotatividade.ipynb
+++ b/analise_rotatividade.ipynb
@@ -1456,6 +1456,36 @@
     "**Impacto Esperado:**\n",
     "Com a implementação das recomendações, espera-se reduzir significativamente a rotatividade, gerando economia substancial e melhorando o ambiente organizacional."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39109264",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "### Esclarecimento sobre Assistência de IA\n",
+    "\n",
+    "Este notebook foi desenvolvido com assistência de ferramentas de **Inteligência Artificial** especificamente para:\n",
+    "\n",
+    "- ✏️ **Correções linguísticas**: Revisão gramatical e ortográfica dos comentários em markdown\n",
+    "- 🔍 **Validações técnicas**: Verificação de coerência entre código e documentação\n",
+    "- 📝 **Melhoria na escrita**: Aprimoramento da clareza e estrutura dos comentários explicativos\n",
+    "- 🎯 **Consistência**: Padronização do estilo de documentação ao longo do notebook\n",
+    "- 📊 **Formatação**: Organização visual e estrutural do conteúdo\n",
+    "- 💻 **Aprimoramento do código**: Otimização de sintaxe, estrutura e boas práticas de programação\n",
+    "\n",
+    "### ⚠️ Importante:\n",
+    "\n",
+    "**Todas as análises, metodologias, insights estatísticos e conclusões de negócio são de autoria própria**, baseadas em:\n",
+    "\n",
+    "- 📈 **Dados reais** do dataset de rotatividade de funcionários\n",
+    "- 🔬 **Metodologias científicas** de ciência de dados (Framework DDPP)\n",
+    "- 💼 **Experiência profissional** em análise de dados e machine learning\n",
+    "- 🧮 **Cálculos matemáticos** e estatísticos originais\n",
+    "\n",
+    "A **IA foi utilizada como ferramenta de apoio** para melhorar a **apresentação, comunicação e qualidade técnica** dos resultados, sem interferir na **substância analítica** do trabalho.\n"
+   ]
   }
  ],
  "metadata": {
