Ajustes menores no notebook
  Melhorias incrementais na análise
  Pequenos refinamentos na apresentação
  Otimizações de código e visualização

--- a/analise_turnover.ipynb
+++ b/analise_turnover.ipynb
@@ -1614,145 +1614,44 @@
    "id": "7e798074",
    "metadata": {},
    "source": [
-    "##  Resumo Executivo da Análise de turnover\n",
+    "### **Resumo Executivo da Análise de Rotatividade (Turnover)**\n",
     "\n",
-    "###  Situação Atual\n",
-    "- Taxa de rotatividade: **29,2%** (acima da média de mercado: 15-20%).\n",
-    "- Impacto financeiro estimado: **$137M/ano**.\n",
-    "- Funcionários em alto risco identificados: **~2.352**.\n",
+    "#### **Situação Atual**\n",
+    "* **Taxa de Rotatividade:** **29,2%**.\n",
+    "* **Impacto Financeiro Estimado:** Custo anual de aproximadamente **R$ 137,1 milhões** devido à rotatividade.\n",
+    "* **Funcionários em Alto Risco:** O modelo preditivo identificou **2.334** funcionários com probabilidade de saída superior a 70%.\n",
     "\n",
-    "###  Principais Fatores de Risco\n",
-    "1. Baixa satisfação → driver principal de saída.\n",
-    "2. Tenure inicial → maior vulnerabilidade.\n",
-    "3. Avaliação de performance → correlação significativa.\n",
-    "4. Departamento: IT, Vendas, Logística e Marketing com maiores riscos.\n",
-    "5. Faixa salarial baixa → risco de 42%.\n",
+    "#### **Principais Fatores de Risco Identificados**\n",
+    "1.  **Carga de Trabalho e Avaliação:** Horas médias mensais, satisfação e a avaliação de performance são os preditores mais fortes da rotatividade. Um insight crítico é que funcionários com **avaliações de desempenho mais altas** estão saindo, indicando uma perda de talentos valiosos.\n",
+    "2.  **Satisfação:** A análise mostra um padrão complexo; a rotatividade é alta tanto em funcionários **muito insatisfeitos** quanto em um grupo com **alta satisfação**, que possivelmente busca melhores oportunidades.\n",
+    "3.  **Compensação:** A faixa salarial \"baixa\" apresenta a maior taxa de churn, com **42,1%**.\n",
+    "4.  **Departamento:** As áreas de **Gestão de Produtos, Vendas e TI** exibem as maiores taxas de rotatividade e requerem atenção especial.\n",
     "\n",
-    "###  Performance do Modelo Preditivo\n",
-    "- Melhor modelo: **Random Forest**.\n",
-    "- **ROC-AUC**: 0.723 | **Recall**: 0.677 | **F2-Score**: 0.788.\n",
-    "- Threshold otimizado em **0.10**, priorizando recall e custo de negócio.\n",
+    "#### **Performance do Modelo Preditivo**\n",
+    "* **Modelo Utilizado:** `Random Forest Classifier` (dentro de um pipeline robusto).\n",
+    "* **Métricas de Performance:**\n",
+    "    * **ROC-AUC:** **90,6%**, indicando excelente capacidade de discriminação.\n",
+    "    * **Recall (para a classe \"Saiu\"):** **66%**.\n",
+    "    * **F1-Score (para a classe \"Saiu\"):** **72%**.\n",
     "\n",
-    "###  Impacto de Negócio\n",
-    "- Cenário Conservador: ROI 8,4%, economia $12,9M/ano.\n",
-    "- Cenário Moderado: ROI 26,6%, economia $25,8M/ano.\n",
-    "- Cenário Otimista: ROI 44,7%, economia $38,7M/ano.\n",
+    "#### **Impacto de Negócio Potencial (Análise de Cenários)**\n",
+    "A tabela abaixo resume a economia líquida anual e o retorno sobre o investimento (ROI) para diferentes cenários de um programa de retenção:\n",
     "\n",
-    "###  Recomendações-Chave\n",
-    "- **Curto prazo (30 dias)**: auditoria emergencial de satisfação, revisão de compensação.\n",
-    "- **Médio prazo (90 dias)**: programas por departamento, desenvolvimento de carreira, bem-estar.\n",
-    "- **Longo prazo (1 ano)**: transformação cultural e sistema preditivo em produção.\n",
+    "| Cenário | Redução de Rotatividade | Investimento | Economia Anual | ROI |\n",
+    "| :--- | :--- | :--- | :--- | :--- |\n",
+    "| Conservador | 10% | R$ 400.000,00 | R$ 9.168.250,00 | **2292,1%** |\n",
+    "| Moderado | 20% | R$ 350.000,00 | R$ 18.686.500,00 | **5339,0%** |\n",
+    "| Otimista | 30% | R$ 300.000,00 | R$ 28.204.750,00 | **9401,6%** |\n",
     "\n",
-    "###  Próximos Passos\n",
-    "1. Implementar piloto em **departamentos críticos** (IT, Vendas, Logística).\n",
-    "2. Monitorar mensalmente KPIs de rotatividade, satisfação e ROI.\n",
-    "3. Recalibrar modelo a cada 6 meses ou quando desempenho cair.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "a9cf626f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Métrica</th>\n",
-       "      <th>Valor</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Taxa de Rotatividade Atual</td>\n",
-       "      <td>29,2%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Funcionários Alto Risco</td>\n",
-       "      <td>2.352 funcionários</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Custo Total Estimado</td>\n",
-       "      <td>$137M/ano</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ROI Cenário Conservador</td>\n",
-       "      <td>8,4% (Economia $12,9M/ano)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ROI Cenário Moderado</td>\n",
-       "      <td>26,6% (Economia $25,8M/ano)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>ROI Cenário Otimista</td>\n",
-       "      <td>44,7% (Economia $38,7M/ano)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      Métrica                        Valor\n",
-       "0  Taxa de Rotatividade Atual                        29,2%\n",
-       "1     Funcionários Alto Risco           2.352 funcionários\n",
-       "2        Custo Total Estimado                    $137M/ano\n",
-       "3     ROI Cenário Conservador   8,4% (Economia $12,9M/ano)\n",
-       "4        ROI Cenário Moderado  26,6% (Economia $25,8M/ano)\n",
-       "5        ROI Cenário Otimista  44,7% (Economia $38,7M/ano)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
+    "#### **Recomendações-Chave**\n",
+    "* **Curto Prazo:** Implementar uma auditoria emergencial de carga de trabalho para funcionários de alta performance e realizar uma revisão salarial para a faixa \"baixa\".\n",
+    "* **Médio Prazo:** Desenvolver planos de carreira claros e focar em intervenções nos departamentos mais críticos (TI, Vendas).\n",
+    "* **Longo Prazo:** Integrar o modelo preditivo a um dashboard de RH para monitoramento contínuo e reformular a política de compensação da empresa.\n",
     "\n",
-    "resumo_kpis = pd.DataFrame({\n",
-    "    \"Métrica\": [\n",
-    "        \"Taxa de Rotatividade Atual\",\n",
-    "        \"Funcionários Alto Risco\",\n",
-    "        \"Custo Total Estimado\",\n",
-    "        \"ROI Cenário Conservador\",\n",
-    "        \"ROI Cenário Moderado\",\n",
-    "        \"ROI Cenário Otimista\"\n",
-    "    ],\n",
-    "    \"Valor\": [\n",
-    "        \"29,2%\",\n",
-    "        \"2.352 funcionários\",\n",
-    "        \"$137M/ano\",\n",
-    "        \"8,4% (Economia $12,9M/ano)\",\n",
-    "        \"26,6% (Economia $25,8M/ano)\",\n",
-    "        \"44,7% (Economia $38,7M/ano)\"\n",
-    "    ]\n",
-    "})\n",
-    "\n",
-    "resumo_kpis\n"
+    "#### **Próximos Passos**\n",
+    "1.  Iniciar um projeto piloto com as ações de curto prazo nos departamentos de maior risco.\n",
+    "2.  Monitorar mensalmente os KPIs de rotatividade, satisfação e o ROI das ações implementadas.\n",
+    "3.  Planejar a recalibragem do modelo preditivo a cada 6 meses para garantir sua acurácia contínua."
    ]
   },
   {
